# sdl-tetris

./: .gitignore  CMakeLists.txt  README.md
include/: board.h  board.hpp  common.h  common.hpp  game.h  game.hpp  player.hpp  render.h  render.hpp
src/: board.c  board.cpp  game.c  game.cpp  main.c  main.cpp  player.cpp  render.c  render.cpp
